Practicing Test-drive development